# eml_transformer

./: .gitignore  AGENTS.md  Dockerfile  MakeFile  README.md  plan.md  pyproject.toml  requirements-hpc.txt  requirements.txt
.github/workflows/: cdk.yml
artifacts/aws_test_results/: README.md
configs/: AGENTS.md  aws.example.yaml  aws.yaml  base.yaml  dev.yaml  hpc.yaml  ingestion.yaml  local.yaml
configs/deployments/: aws-dev.yaml  aws-prod.yaml  aws-smoke.yaml  hpc-dev.yaml  local.yaml
configs/environments/: dev.yaml  prod.yaml
configs/sources/: gdelt.yaml  iem_afos.yaml  miso_notifications.yaml  newsapi.yaml  weather_alerts.yaml
docs/: AGENTS.md  aws_deployment_security.md  aws_s3_layout.md  design_principles.md  ingestion.md  ingestion_pipeline.md  local_setup.md  project_structure.md  run_location_test_deployment_report.md  sample_prompts.md  storage_transfer.md
infra/: AGENTS.md
infra/cdk/: README.md  app.py  cdk.json  requirements.txt
notebooks/: MISO_historical_alerts.ipynb  data_inspection.ipynb  gdelt_data.ipynb  gdelt_scraping.ipynb  nws_text_data.ipynb  styler.mplstyle  text_embeddings.ipynb
notebooks /: nws_text_data.ipynb
scripts/: AGENTS.md  download_gdelt.py  explore_gdelt.py  explore_iem_afos.py  run.sh  run_ingestion.sh  test_hpc.sh
scripts/aws/: run_all.sh
scripts/aws_test/: cleanup.sh  phase0_preflight.sh  phase1_static.sh  phase2_container.sh  phase3_infra.sh  phase4_ingest.sh  phase5_gdelt.sh  phase6_pipeline.sh  (+4 more)
tests/: AGENTS.md  test_backfill_workflow.py  test_cdk_stack.py  test_deployment_config.py  test_gdelt_aws.py
(+78 files in other folders)
