[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eml_transformer"
version = "0.1.0"
dependencies = [
    "pandas",
    "requests",
    "beautifulsoup4",
    "typer",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
eml_transformer = "eml_transformer.cli:app"