[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eml_transformer"
version = "0.1.0"
dependencies = [
    "pandas",
    "requests",
    "beautifulsoup4",
    "typer",
    "pyarrow",
    "python-dotenv",
    "PyYAML",
]

[project.optional-dependencies]
aws = [
    "boto3==1.43.0",
    "botocore==1.43.0",
    "aiobotocore==3.7.0",
    "s3fs==2026.4.0",
]
cdk = [
    "aws-cdk-lib>=2.147.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
]
hpc = [
    "sentence-transformers",
]
test = [
    "pytest>=8.0",
]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
eml_transformer = "eml_transformer.cli:app"
